Add aspect-ratio, fix urls

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,22 +25,23 @@
 
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="{{ meta_image | relative_url }}" />
+  <meta property="fc:frame:image:aspect_ratio" content="1.91:1">
   <meta property="fc:frame:button:1" content="{{ page.title }}" />
   <meta property="fc:frame:button:1:action" content="link" />
-  <meta property="fc:frame:button:1:target" content="{{ page.url }}" />
+  <meta property="fc:frame:button:1:target" content="{{ page.url | prepend: site.url }}" />
 
   {% if page.title == 'Home' %}
     <meta property="fc:frame:button:2" content="People" />
     <meta property="fc:frame:button:2:action" content="link" />
-    <meta property="fc:frame:button:2:target" content="/people/" />
+    <meta property="fc:frame:button:2:target" content="{{ '/people/' | prepend: site.url  }}" />
 
     <meta property="fc:frame:button:3" content="Work" />
     <meta property="fc:frame:button:3:action" content="link" />
-    <meta property="fc:frame:button:3:target" content="/work/" />
+    <meta property="fc:frame:button:3:target" content="{{  '/work/' | prepend: site.url }}" />
 
     <meta property="fc:frame:button:4" content="Dripline" />
     <meta property="fc:frame:button:4:action" content="link" />
-    <meta property="fc:frame:button:4:target" content="/dripline/" />
+    <meta property="fc:frame:button:4:target" content="{{  '/dripline/' | prepend: site.url  }}" />
   {% endif %}
   
   <meta name="theme-color" content="#9900FC">
