--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,8 +1,10 @@
 <div class="flex-l items-center mv2">
   <div class="w-100-l mt6 cover">
-    <!-- <div class="vh-100 dt w-100 tc  white cover root" > -->
-    <h3 class="w-70-ns f2 f2-m f1-l lh-title accent normal sans-serif">
-      Hypha collaborates with communities to build better relationships with technology.
+    <h3 class="w-50-ns f2 f2-m f1-l lh-title accent normal sans-serif">
+      Co-creating rich futures with holistic tech
     </h3>
+    <div class="f3 measure-wide dark-gray lh-copy mb5">
+      We're Hypha, a worker co-op that helps our client communities make new technologies work for them
+      </div>
   </div>
 </div>
