--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,11 +1,12 @@
 <div class=" flex justify-between flex-nowrap-ns flex-wrap mt6-ns mt5">
     <div class="flex flex-column  measure-wide-l measure-m">
-      <h2 class="mb1-l mt0-l">Who we are</h2>
+      <h2 class="mb1-l mt0-l">Cooperation is our DNA</h2>
       <div><p class="f3 lh-copy">
-        We are a team of technologists, artists, engineers, designers, and community organizers who value working with mission-oriented partners.
+        Hypha is incorporated as a worker co-operative, which means we’re led by our employees. We believe that serving our member-workers is also the best way to serve our clients long-term.
         <br/>
         <br/>
-        Together, we have years of experience building open source technologies and sustainable communities.
+
+Operating as a co-op constantly raises our bar for collaboration and gives us lived insight into how many of our clients work too. Our shared knowledge and resources as a collective let us do much more than we can on our own.
       </p></div>
       <div><p class="f3 mb0 ">
         Read more about <a class="link accent" href="/people/">our team.</a>
