--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -4,7 +4,7 @@
       Co-creating rich futures with holistic tech
     </h3>
     <div class="f3 measure-wide dark-gray lh-copy mb5">
-      We're Hypha, a worker co-op that helps our client communities make new technologies work for them
+      We're Hypha, a worker co-op that helps our client communities make new technologies work for them.
       </div>
   </div>
 </div>
