--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -2,7 +2,7 @@
   <div class="mr3">
       <h2 class="">What we do</h2>
     <p class="lh-copy f3 measure mt0">
-      We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech
+      We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech.
     </p>
   </div>
 
