Update our-services.html to add missing period

--- a/_includes/sections/our-services.html
+++ b/_includes/sections/our-services.html
@@ -1,7 +1,7 @@
 <div class="mt6-ns mt5">
   <h2 class="">Our services</h2>
   <p class="lh-copy f3 measure mt0">
-    We provide embedded, end-to-end partnership at the executive level
+    We provide embedded, end-to-end partnership at the executive level.
   </p>
   <div class="flex flex-between flex-wrap mt5-ns">
     {% assign element = page.our_services%} {%
