Add link to our work page in "what we do" section

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -4,6 +4,10 @@
     <p class="lh-copy f3 measure mt0">
       We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech.
     </p>
+    <p class="lh-copy f3 mt0">
+      Read more about
+      <a class="accent link underline-hover" href="/work/">our work</a>.
+    </p>
   </div>
 
 </div>
