Bring short sentence into previous paragraph

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -2,14 +2,10 @@
   <div class="mr3">
       <h2 class="">What we do</h2>
     <p class="lh-copy f3 measure mt0">
-      We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech.
-    </p>
-    <p class="lh-copy f3 mt0">
-      Read more about
+      We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech. Read more about
       <a class="accent link underline-hover" href="/work/">our work</a>.
     </p>
   </div>
-
 </div>
 <h3 class="f2 accent">
   Our practice areas
