--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,16 +1,14 @@
 <div class=" flex justify-between flex-nowrap-ns flex-wrap mt6-ns mt5">
     <div class="flex flex-column  measure-wide-l measure-m">
-      <h2 class="mb1-l mt0-l">Cooperation is our DNA</h2>
-      <div><p class="f3 lh-copy">
+      <h2 class="mb1-l mt0-l">
+        Cooperation is our DNA
+      </h2>
+      <p class="f3 lh-copy">
         Hypha is incorporated as a worker co-operative, which means we’re led by our employees. We believe that serving our member-workers is also the best way to serve our clients long-term.
         <br/>
         <br/>
-
-Operating as a co-op constantly raises our bar for collaboration and gives us lived insight into how many of our clients work too. Our shared knowledge and resources as a collective let us do much more than we can on our own.
-      </p></div>
-      <div><p class="f3 mb0 ">
-        Read more about <a class="link accent" href="/people/">our team.</a>
-      </p></div>
+        Operating as a co-op constantly raises our bar for collaboration and gives us lived insight into how many of our clients work too. Our shared knowledge and resources as a collective let us do much more than we can on our own. Read more about <a class="link accent" href="/people/">our team</a>.
+      </p>
     </div>
     <div class="w-100 w-50-ns">
         <img  class="mw-100" src="/assets/images/block2.png" alt="mushrooms growing out of a computer chip"/>
