--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -7,14 +7,14 @@
     </p>
   </div>
 </div>
-<h3 class="f2 accent">
+<h2 class="f2 accent">
   Our practice areas
-</h3>
+</h2>
 <div class="flex flex-between flex-wrap mt5-ns">
   {% assign element = page.what_we_do%} {%
     for element in page.what_we_do %}
     <div class="w-33-l measure flex-column justify-left items-left center-l mb2 tl pr4">
-      <h2 class="f3">{{ element.title }}</h2>
+      <h3 class="f3 accent">{{ element.title }}</h3>
       <p class="pb3 f3 lh-copy">{{ element.description }}</p>
     </div>
   {% endfor %}
