--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -128,7 +128,7 @@ mark {
     }
   }
   .c-lab-and-lines {
-    background-image: url(/assets/images/c-lab.svg),
+    background-image: url(/assets/images/root1.png),
       url(/assets/images/footer1.png);
     background-repeat: no-repeat, no-repeat;
     background-position: top right, bottom right;
@@ -136,8 +136,28 @@ mark {
     @media screen and (min-width: 1600px) {
       background-size: 40%, 20%;    
     }
-}
   }
+  .hek-and-lines {
+    background-image: url(/assets/images/trollius.webp),
+      url(/assets/images/footer1.png);
+    background-repeat: no-repeat, no-repeat;
+    background-position: top right, bottom right;
+    background-size: 30%, 20%;
+    @media screen and (min-width: 1600px) {
+      background-size: 25%, 20%;    
+    }
+  }
+  .furtherfield-and-lines {
+    background-image: url(/assets/images/new_canopy.webp),
+      url(/assets/images/footer1.png);
+    background-repeat: no-repeat, no-repeat;
+    background-position: top right, bottom right;
+    background-size: 30%, 20%;
+    @media screen and (min-width: 1600px) {
+      background-size: 22.5%, 20%;    
+    }
+  }
+}
 
 .block {
   background-image: url(/assets/images/block1.png);
