Transition eases in and out

--- a/_sass/tachyons-sass/scss/_hovers.scss
+++ b/_sass/tachyons-sass/scss/_hovers.scss
@@ -44,12 +44,12 @@
 
 */
 .glow {
-  transition: opacity .15s ease-in;
+  transition: opacity .15s ease-in-out;
 }
 .glow:hover,
 .glow:focus {
   opacity: 1;
-  transition: opacity .15s ease-in;
+  transition: opacity .15s ease-in-out;
 }
 
 /*
