Add glow class for opacity change on backdrop hover

--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -6,7 +6,7 @@
   </div>
   <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l absolute static-l bg-white w-100 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
     {%- include sections/navigation.html -%}
-    <a href="#" class="dn-l bg-accent top-0 left-0 bottom-0 w-25 backdrop o-60 z-max absolute" tabindex="-1"></a>
+    <a href="#" class="dn-l bg-accent top-0 left-0 bottom-0 w-25 backdrop glow o-60 z-max absolute" tabindex="-1"></a>
   </nav>
   <div id="white-space" class="dn vh-95 s0 relative"></div>
 </div>
