Update spacing in our-services, our-values, what-we-do, who-we-are, and work-with-us

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,10 +1,10 @@
-<div class="measure-m mt6 mr5-l">
-  <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Technology you can believe in</h2>
+<div class="measure-m mt6-ns mt5 mb4 mr5-l">
+  <h2 class="f1 f-subheadline-l sans-serif mt0 accent">Technology you can believe in</h2>
   </div>
 
-<div class="mb5 flex-ns justify-start mt4 mt6-ns mt4-l">
+<div class="mb5 flex-ns justify-start mt0">
   <div class="measure-wide-l measure-m mr5-l">
-    <p class="measure f3 lh-copy">
+    <p class="measure f3 lh-copy mt0">
       We believe richer futures are possible through technology that’s community-driven.
       <br><br>
       New technologies and practices like blockchain, peer-to-peer, open source, and decentralized governance are putting power back into the hands of people.
