--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,6 +1,6 @@
-<div class="flex-l mt6-ns mt4 mb6-ns mb4">
+<div class="flex-l mt6-ns mt5 mb6-ns mb4">
   <div class="w-75-l">
-    <h2 class="f1 f-subheadline-l sans-serif accent mb1">Work with us</h2>
+    <h2 class="f1 f-subheadline-l sans-serif accent">Work with us</h2>
 
     <h3 class="f3 f3-l normal lh-solid measure  sans-serif">
       We would love to hear from you about new projects, partnerships, and
