--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,9 +1,9 @@
 <div class="flex-l items-center mv2">
   <div class="w-100-l mt6 cover">
-    <h3 class="w-50-ns f2 f2-m f1-l lh-title accent normal sans-serif">
+    <h2 class="w-70 fw4">
       Co-creating rich futures with holistic tech
-    </h3>
-    <div class="f3 measure-wide dark-gray lh-copy mb5">
+    </h2>
+    <div class="f2 measure dark-gray lh-copy mb5">
       We're Hypha, a worker co-op that helps our client communities make new technologies work for them.
       </div>
   </div>
