--- a/_layouts/practice_area.html
+++ b/_layouts/practice_area.html
@@ -21,9 +21,9 @@
         <p class="pb3 f3 lh-copy measure-wide mb4">{{ page.description }}</p>
         <p class="pb3 f3 lh-copy measure-wide">{{ page.tagline }}</p>
         <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Services</h3>
-        <div class="w-100 flex flex-wrap mb4 justify-around">
+        <div class="w-100 flex flex-wrap mb4 justify-start">
           {% for service in page.services %}
-            <div class="w-45 w-100-s w100 pr3 mb3">
+            <div class="w100 pr3 mb3">
               <h4 class="f3 measure-wide mb0 lh-copy accent">{{ service.title }}</h4>
               {% for paragraph in service.description %}
                 <p class="pb3 f3 lh-copy measure-wide">{{ paragraph }}</p>
