Reduce column width on 3 column layout

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -13,7 +13,7 @@
 <div class="flex flex-between flex-wrap">
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
-    <div class="w-33-l measure flex-column justify-left items-left center-l tl pr4">
+    <div class="w-30-l measure flex-column justify-left items-left tl pr4">
       <h3 class="f3 accent">{{ element.title }}</h3>
       <p class="pb3 f3 lh-copy">
         {{ element.description }}
