Justify columns with space between

--- a/_includes/sections/our-services.html
+++ b/_includes/sections/our-services.html
@@ -6,7 +6,7 @@
   </p>
   </div>
 </div>
-  <div class="flex flex-between flex-wrap">
+  <div class="flex flex-between justify-between flex-wrap">
     {% assign element = page.our_services%} {%
       for element in page.our_services %}
       <div class="w-30-l measure flex-column justify-left items-left tl pr4">
