--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -10,7 +10,7 @@
 <h2 class="f2 accent mb2">
   Our practice areas
 </h2>
-<div class="flex flex-between flex-wrap">
+<div class="flex flex-between justify-between flex-wrap">
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
     <div class="w-30-l measure flex-column justify-left items-left tl pr4">
