Add period after `Read more`

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -19,7 +19,7 @@
         {{ element.description }}
       
         {% if element.slug %}
-          <a href="/{{ element.slug }}/" class="accent link underline-hover">Read more</a>
+          <a href="/{{ element.slug }}/" class="accent link underline-hover">Read more</a>.
         {% endif %}
 
       </p>
