--- a/_layouts/practice_area.html
+++ b/_layouts/practice_area.html
@@ -40,7 +40,7 @@
         </div>
       </section>
       <section class="ph3 pl5-l">
-        <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Our past work</h3>
+        <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Selected work</h3>
         <div class="flex flex-wrap justify-left mb4 pv4">
           {% assign index_page = site.pages | where: "title", "Home" | first %}
           {% assign practice_slug = '' %}
