--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -3,7 +3,7 @@
       <h2>What we do</h2>
     <p class="lh-copy f3 measure mt0">
       We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech. Read more about
-      <a class="accent link underline-hover" href="/work/">our work</a>.
+      <a class="accent link underline-hover" href="/work/">our work</a>  across Hypha's three practice areas.
     </p>
   </div>
 </div>
