Increase practice area title sizes

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -11,7 +11,7 @@
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
     <div class="w-30-l measure flex-column justify-left items-left tl pr4">
-      <h3 class="f3 accent">{{ element.title }}</h3>
+      <h2 class="f2 accent mb1">{{ element.title }}</h2>
       <p class="pb3 f3 lh-copy">
         {{ element.description }}
       
