--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -11,7 +11,15 @@
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
     <div class="w-30-l measure flex-column justify-left items-left tl pr4">
-      <h2 class="f2 accent mb1">{{ element.title }}</h2>
+      {% if element.slug %}
+        <a href="/{{ element.slug }}/" class="underline-hover">
+      {% endif %}
+      <h2 class="f2 accent mb1">
+        {{ element.title }}
+      </h2>
+      {% if element.slug %}
+        </a>
+      {% endif %}
       <p class="pb3 f3 lh-copy">
         {{ element.description }}
       
