--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,7 +1,7 @@
 <div class="flex sans-serif ">
-  <div class="w-100">
+  <div class="w-90 w-100-ns">
     <a href="{{ "/" | relative_url }}" class="flex flex-wrap items-baseline no-underline " id="hypha-title">
-      <h1 class="f4 f3-ns fw9 ttu ma0 accent mr2-ns mr4">Hypha</h1>
+      <h1 class="f4 f3-ns fw9 ttu ma0 accent mr2">Hypha</h1>
       <h2 class=" gray f4 fw5 f3-ns normal ma0">Worker Co-operative</h2></a>
   </div>
   <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l absolute static-l bg-white w-100 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
