Mobile fix: responsive container widths and margins

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,6 +1,6 @@
 <div class="flex-l items-center mv2">
-  <div class="w-100-l mt6 cover">
-    <h2 class="w-70 fw4">
+  <div class="w-100-l mt5 mt6-ns cover">
+    <h2 class="w-90 w-70-ns fw4">
       Co-creating rich futures with holistic tech
     </h2>
     <div class="f2 measure dark-gray lh-copy mb5">
