--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,13 +54,13 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}?{{ site.time | date: '%s%N' }}">
 
   {% if page.activity %}
-    <link href="{{ page.activity.url | absolute_url }}" rel="alternate" type="application/activity+json" />
+    <link href="{{ page.activity.url[0].href }}" rel="alternate" type="application/activity+json" />
   {% endif %}
 
   <meta property="profile:username" content="{{ site.activity_pub_profile }}" />
 
   {%- if site.actor -%}
-    <link rel="me" href="{{ site.actor.url | absolute_url }}" />
+    <link rel="me" href="{{ site.actor.url[0].href }}" />
   {%- endif -%}
 
 </head>
