--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -12,6 +12,7 @@
         <img style="width:14px;"  src="/assets/images/logos/rss-logo.png" alt="rss icon">
         </a>
         </li>
+      <li class="pr3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank" rel="noopener">Newsletter</a></li>
     </ul> <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/Policies/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
