--- a/_includes/activity_pub/interactions.html
+++ b/_includes/activity_pub/interactions.html
@@ -22,6 +22,7 @@
 
 {% assign all_interactions = activities | concat: reactions | sort: 'published' %}
 
+{% unless activities == empty %}
 <div class="w-100" data-controller="tabs" data-tabs-hide-class="hide" data-tabs-show-class="show">
   <!-- 
 
@@ -86,3 +87,4 @@
     {% endunless %}
   </div>
 </div>
+{% endunless %}
